src/features/home/user/sprintBoard/styles/sprintBoard.module.css
.title {
    font-size: 22px;
    margin-top: 10px;
}

.subtitle {
    font-size: 14px;
    margin-top: 5px;
    color: dimgray;
}

.scrollmenu {
    overflow: auto;
    white-space: nowrap;
    padding: 20px;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.scrollmenu::-webkit-scrollbar {
    display: none;
}

.scrollmenu .cardsPart {
    display: inline-flex;
    padding: 10px;
}

